--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -76,6 +76,37 @@ body {
 
     $couleur_primaire: #FF0101;
 
+    #home {
+        float: right;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+
+        button {
+            margin: 20px;
+            background: transparent;
+            border: none;
+
+            a {
+                padding: 12px 30px;
+                background: $couleur_primaire;
+                border-radius: 5px;
+                text-decoration: none;
+                color: white;
+                font-size: 20px;
+                transition-duration: 400ms;
+
+                &:hover {
+                    background: black;
+                }
+            }
+        }
+    }
+
     #user_profile {
         display: flex;
         flex-wrap: wrap;
@@ -401,12 +432,18 @@ body {
                             transform: scale(0.82);
                         }
 
-                        g text {
-                            fill: white !important;
+                        .recharts-polar-angle-axis-ticks g.recharts-polar-angle-axis-tick {
+                            &:nth-of-type(4) text {
+                                transform: translateY(10px);
+                            }
 
-                            tspan {
-                                font-weight: 500;
-                                font-size: 12px;
+                            text {
+                                fill: white !important;
+
+                                tspan {
+                                    font-weight: 500;
+                                    font-size: 12px;
+                                }
                             }
                         }
 
